--- a/.github/workflows/final-action.yml
+++ b/.github/workflows/final-action.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
+      - name: Build Production
+        run: npm build
       - name: Cypress Execution
         id: cypress
         continue-on-error: true
