--- a/.github/workflows/final-action.yml
+++ b/.github/workflows/final-action.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build Production
-        run: npm build
+        run: npm run build
       - name: Cypress Execution
         id: cypress
         continue-on-error: true
