--- a/.github/workflows/final-action.yml
+++ b/.github/workflows/final-action.yml
@@ -74,11 +74,30 @@ jobs:
         with:
           status: ${{steps.results.outputs.cypress_outcome}}
       - name: Commit and push if changed
-        run: | 
+        run: |
           git config --global user.email "readme-bot@epablocs.com"
           git config --global user.name "README-actionBot"
           git add README.md
           git commit -m "Updated Badge from test results" || exit 0
           git push
+
+  deploy_job:
+
+    runs-on: ubuntu-latest
+
+    needs: add_badge_job
+
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v2
+      - name: Vercel Deploy
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+          vercel-args: '--prod' #Optional
+          vercel-org-id: ${{ secrets.ORGID}}  #Required
+          vercel-project-id: ${{ secrets.PRJID}} #Required
+          working-directory: .
+
 
 
